[gd_scene format=3 uid="uid://bh6rlfkmh1ohi"]

[ext_resource type="MeshLibrary" uid="uid://c6k5d3ajdptd5" path="res://Meshlib/tiles.tres" id="1_ct31n"]
[ext_resource type="Script" uid="uid://u0amuynrw07" path="res://Scripts/main.gd" id="1_w5nr3"]
[ext_resource type="Script" uid="uid://cedti7dbgeds" path="res://Scripts/ground.gd" id="2_dq3d8"]
[ext_resource type="PackedScene" uid="uid://dbgck5bxvyatv" path="res://Scenes/character.tscn" id="2_r85wr"]
[ext_resource type="PackedScene" uid="uid://bg6ed61lknyth" path="res://Scenes/UI/battle_ui.tscn" id="2_xer0r"]
[ext_resource type="PackedScene" uid="uid://so21sg3rx54y" path="res://Scenes/signal_bus.tscn" id="4_b3802"]
[ext_resource type="PackedScene" uid="uid://cmiywraslxdps" path="res://Scenes/arrow.tscn" id="7_qwrnw"]
[ext_resource type="Script" uid="uid://lr40hdwjukyr" path="res://Scripts/camera_pivot.gd" id="7_wqngb"]
[ext_resource type="Script" uid="uid://dnge58oejvwtm" path="res://Scripts/camera_container.gd" id="8_t5d4i"]
[ext_resource type="Script" uid="uid://cmjo61jwbwm2" path="res://Scripts/camera_3d.gd" id="8_ypjsh"]
[ext_resource type="MeshLibrary" uid="uid://di0mmlhw2675u" path="res://Meshlib/arrows.tres" id="9_ejrs7"]
[ext_resource type="Script" uid="uid://xhogcsc4wkrl" path="res://Scripts/arrow_map.gd" id="10_bvv7k"]
[ext_resource type="MeshLibrary" uid="uid://j00805tr5xyn" path="res://Meshlib/overlay.tres" id="10_wsu2k"]
[ext_resource type="Resource" uid="uid://d2qkoqg3ttlpu" path="res://Resources/Grid.tres" id="11_l4201"]
[ext_resource type="PackedScene" uid="uid://cqho3uyy7s34w" path="res://Scenes/cursor.tscn" id="12_bvaut"]
[ext_resource type="PackedScene" uid="uid://pa4cgay4kwro" path="res://Scenes/Attacks/heavy attack.tscn" id="12_fevyy"]
[ext_resource type="PackedScene" uid="uid://col4orb8a3y68" path="res://Scenes/Attacks/slash.tscn" id="13_hibaj"]
[ext_resource type="PackedScene" uid="uid://j1bpwip3x252" path="res://Scenes/UI/attack_interface.tscn" id="16_k12tt"]
[ext_resource type="PackedScene" uid="uid://dl84svupqw8qx" path="res://Scenes/StateMachine/battle_state_machine.tscn" id="19_fevyy"]

[node name="Main" type="Node" unique_id=197013863 node_paths=PackedStringArray("state_machine")]
script = ExtResource("1_w5nr3")
state_machine = NodePath("BattleStateMachine")

[node name="Ground" type="GridMap" parent="." unique_id=756785430]
mesh_library = ExtResource("1_ct31n")
data = {
"cells": PackedInt32Array(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 2, 1, 1, 2, 1, 2, 0, 1, 2, 1, 1, 2, 2, 1, 3, 1, 1, 3, 2, 1, 3, 0, 1, 4, 0, 1, 4, 1, 1, 4, 2, 1, 0, 3, 1, 1, 3, 1, 2, 3, 1, 3, 3, 1, 4, 3, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 8, 1, 1, 8, 2, 1, 8, 3, 1, 8, 4, 1, 7, 4, 1, 7, 5, 1, 6, 5, 1, 5, 5, 1, 4, 5, 1, 3, 5, 1, 2, 5, 1, 2, 4, 1, 1, 4, 1, 0, 4, 1, 0, 5, 1, 1, 5, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 3, 1, 7, 2, 1, 7, 1, 1, 6, 1, 1, 5, 1, 1, 5, 2, 1, 5, 3, 1, 6, 3, 1, 6, 2, 1, 8, 5, 1, 9, 0, 1, 9, 1, 1, 9, 2, 1, 9, 3, 1, 9, 4, 1, 7, 6, 1, 6, 6, 1, 5, 6, 1, 4, 6, 1, 3, 6, 1, 2, 6, 1, 1, 6, 1, 0, 6, 1, 8, 6, 1, 9, 6, 1, 10, 6, 1, 10, 5, 1, 10, 4, 1, 10, 3, 1, 11, 2, 1, 11, 1, 1, 10, 1, 1, 10, 0, 1, 10, 2, 1, 9, 5, 1, 11, 6, 1, 11, 5, 1, 11, 4, 1, 11, 3, 1, 11, 0, 1, 0, 7, 1, 1, 7, 1, 2, 7, 1, 3, 7, 1, 4, 7, 1, 5, 7, 1, 6, 7, 1, 7, 7, 1, 8, 7, 1, 9, 7, 1, 10, 7, 1, 11, 7, 1)
}
script = ExtResource("2_dq3d8")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="SignalBus" parent="." unique_id=1903393373 instance=ExtResource("4_b3802")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=614814771]
transform = Transform3D(1, 0, 0, 0, 0.869219, 0.494427, 0, -0.494427, 0.869219, -5.1178, 2.8578, 2.19359)

[node name="Arrow" parent="." unique_id=1109324533 instance=ExtResource("7_qwrnw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 3, 0)

[node name="CameraContainer" type="Node3D" parent="." unique_id=1148898337]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0203795, 1.56835, -0.114855)
script = ExtResource("8_t5d4i")

[node name="CameraPivot" type="Node3D" parent="CameraContainer" unique_id=1774944870]
script = ExtResource("7_wqngb")
sensitivity = 100

[node name="Camera3D" type="Camera3D" parent="CameraContainer/CameraPivot" unique_id=2039600524]
transform = Transform3D(1, 0, 0, 0, 0.858701, 0.512478, 0, -0.512478, 0.858701, -0.489256, 4.76222, 8.58342)
script = ExtResource("8_ypjsh")

[node name="Overlay" type="GridMap" parent="." unique_id=119309149]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
mesh_library = ExtResource("10_wsu2k")

[node name="Cursor" parent="." unique_id=1127224615 instance=ExtResource("12_bvaut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.74361, 1.18289, -6.32617)

[node name="Character" parent="." unique_id=120968370 node_paths=PackedStringArray("attack_abilities") instance=ExtResource("2_r85wr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.48616, 2.41666, 0)
initial_cell = Vector3(5, 0, 3)
option_menu_offset = Vector2(100, -100)
attack_abilities = [NodePath("HeavyAttack"), NodePath("Slash")]

[node name="HeavyAttack" parent="Character" unique_id=218684482 instance=ExtResource("12_fevyy")]

[node name="Slash" parent="Character" unique_id=1686365112 instance=ExtResource("13_hibaj")]

[node name="Character2" parent="." unique_id=276793439 node_paths=PackedStringArray("attack_abilities") instance=ExtResource("2_r85wr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.124868, 2.267197, 4.0011683)
initial_cell = Vector3(3, 0, 0)
cname = "P2"
option_menu_offset = Vector2(100, -100)
attack_abilities = [NodePath("Slash"), NodePath("HeavyAttack")]

[node name="Slash" parent="Character2" unique_id=690904165 instance=ExtResource("13_hibaj")]

[node name="HeavyAttack" parent="Character2" unique_id=65047472 instance=ExtResource("12_fevyy")]
ap_cost = 3

[node name="ArrowMap" type="GridMap" parent="." unique_id=1728430268]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh_library = ExtResource("9_ejrs7")
script = ExtResource("10_bvv7k")
grid = ExtResource("11_l4201")
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="UI elements" type="Control" parent="." unique_id=1898031747]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BattleUI" parent="UI elements" unique_id=1647881709 instance=ExtResource("2_xer0r")]
layout_mode = 1

[node name="attack_interface" parent="UI elements" unique_id=1903270686 node_paths=PackedStringArray("camera", "signal_bus") instance=ExtResource("16_k12tt")]
layout_mode = 1
offset_left = 628.0
offset_top = -50.0
offset_right = 837.0
offset_bottom = 135.0
camera = NodePath("../../CameraContainer/CameraPivot/Camera3D")
signal_bus = NodePath("../../SignalBus")

[node name="BattleStateMachine" parent="." unique_id=483840876 node_paths=PackedStringArray("signal_bus") instance=ExtResource("19_fevyy")]
signal_bus = NodePath("../SignalBus")

[connection signal="action_done" from="SignalBus" to="." method="_on_signal_bus_action_done"]
[connection signal="ap_update" from="SignalBus" to="UI elements/BattleUI" method="_on_signal_bus_ap_update"]
[connection signal="atk_pressed" from="SignalBus" to="." method="_on_signal_bus_atk_pressed"]
[connection signal="walk_finished" from="SignalBus" to="." method="_on_signal_bus_walk_finished"]
[connection signal="attack" from="UI elements/BattleUI" to="." method="_on_battle_ui_attack"]
[connection signal="next_turn" from="UI elements/BattleUI" to="SignalBus" method="_on_battle_ui_next_turn"]
